Fix file reading path for production JAR